--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>org.buildsomethingawesome.lib</groupId>
     <artifactId>awesome-java-swing</artifactId>
-    <version>1.0</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Awesome Library (Java Swing)</name>
